# homegrown-organic-emulators

./: .gitignore  CMakeLists.txt  README.md  shell.c
chip8/: CMakeLists.txt  README.md  main.c  sdl_layer.c  shell.c
chip8/include/: chip8.h  sdl_layer.h
chip8/src/: sdl_layer.c  shell.c
emu8080/: disassembler8080.c  shell.c
nes/: .gitignore  Cargo.toml  README.md  \
nes/src/: bus.rs  cartridge.rs  controller.rs  cpu.rs  main.rs  opcodes.rs  tile_info.rs  tiles_viewer.rs  trace.rs
nes/src/ppu/: mod.rs
nes/src/ppu/registers/: addr.rs  control.rs  mask.rs  scroll.rs  status.rs
nes/src/render/: frame.rs  mod.rs  palette.rs
